[package]
name = "defmt-ringbuf-miri"
description = "ring buffer miri testing"
authors = ["Sebastian Urban <surban@surban.net>"]
categories = ["embedded", "no-std"]
keywords = ["defmt", "defmt-transport"]
readme = "README.md"
repository = "https://github.com/surban/openemc"
license = "MIT OR Apache-2.0"
version = "0.2.0"
edition = "2021"

[dependencies]
